--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="card-container">
             <div class="card">
                 <div class="card-img">
-                    <img src="/assets/pirveli.svg" alt="first card">
+                    <img src="pirveli.svg" alt="first card">
                 </div>
 
                 <div class="card-body">
@@ -47,7 +47,7 @@
                     <p>Software Engineer</p>
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="site icons">
+                        <img src="Icons.svg" alt="site icons">
                     </div>
                 </div>
 
@@ -57,7 +57,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="assets/meore.svg" alt="">
+                    <img src="meore.svg" alt="">
                 </div>
 
                 <div class="card-body">
@@ -66,7 +66,7 @@
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
 
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="">
+                        <img src="Icons.svg" alt="">
                     </div>
                 </div>
 
@@ -75,7 +75,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./assets/mesame.svg" alt="">
+                    <img src="mesame.svg" alt="">
                 </div>
 
                 <div class="card-body">
@@ -83,7 +83,7 @@
                     <p>Software Engineer</p>
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="">
+                        <img src="Icons.svg" alt="">
                     </div>
                 </div>
 
@@ -93,7 +93,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./assets/meotxe.svg" alt="">
+                    <img src="meotxe.svg" alt="">
                 </div>
 
                 <div class="card-body">
@@ -102,7 +102,7 @@
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
 
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="">
+                        <img src="Icons.svg" alt="">
                     </div>
                 </div>
 
@@ -112,7 +112,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./assets/mexute.svg" alt="">
+                    <img src="mexute.svg" alt="">
                 </div>
 
                 <div class="card-body">
@@ -121,7 +121,7 @@
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
 
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="">
+                        <img src="Icons.svg" alt="">
                     </div>
                 </div>
 
@@ -131,7 +131,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./assets/meeqvse.svg" alt="">
+                    <img src="meeqvse.svg" alt="">
                 </div>
 
                 <div class="card-body">
@@ -140,7 +140,7 @@
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
 
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="">
+                        <img src="Icons.svg" alt="">
                     </div>
                 </div>
 
