--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylrsheet" href="responsive.css"/>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylrsheet" href="responsive.css">
 </head>
 
 <body>
@@ -150,7 +150,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./assets/meshvide.svg" alt="">
+                    <img src="meshvide.svg" alt="">
                 </div>
 
                 <div class="card-body">
@@ -158,7 +158,7 @@
                     <p>Software Engineer</p>
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="">
+                        <img src="Icons.svg" alt="">
                     </div>
                 </div>
 
@@ -167,7 +167,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="./assets/merve.svg" alt="">
+                    <img src="merve.svg" alt="">
                 </div>
 
                 <div class="card-body">
@@ -175,7 +175,7 @@
                     <p>Software Engineer</p>
                     <p class="card-text">There are many variations of passages of Lorem Ipsum available</p>
                     <div class="card-icons">
-                        <img src="/assets/Icons.svg" alt="">
+                        <img src="Icons.svg" alt="">
                     </div>
                 </div>
 
@@ -195,7 +195,7 @@
 
             <div class="box">
                 <div class="box-img">
-                    <img src="./assets/image 1.svg" alt="">
+                    <img src="image 1.svg" alt="">
                 </div>
 
                 <div class="box-text">
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="footer-icons">
-                    <img src="./assets/Group 1.svg" alt="">
+                    <img src="Group 1.svg" alt="">
                 </div>
             </div>
 
